--- a/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
+++ b/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
@@ -419,10 +419,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "171a6229-097f-4fb0-8bff-ed40ab603d72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m  \u001b[38;5;66;03m# Importing pandas\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Creating a Series\u001b[39;00m\n\u001b[0;32m      4\u001b[0m data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m40\u001b[39m]  \u001b[38;5;66;03m# Sample data for the Series\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd  # Importing pandas\n",
     "\n",
@@ -522,16 +534,69 @@
    "outputs": [],
    "source": [
     "# Example Usages\n",
-    "df.iloc[1:10] #retrieves the first 10 entries\n",
+    "df.iloc[1:10] #retrieves the first 10 entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "568891ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
     "\n",
+    "# Sample DataFrame\n",
+    "data = {'Name': ['Alice', 'Bob', 'Charlie'],\n",
+    "        'Age': [25, 30, 35]}\n",
     "\n",
-    "\n"
+    "df = pd.DataFrame(data, index=['a', 'b', 'c']) # assigning custom row labels (index)\n",
+    "\n",
+    "# Using .loc to select by label\n",
+    "print(df.loc['a'])          # Select row with index label 'a'\n",
+    "print(df.loc['a':'b'])      # Select rows 'a' to 'b' (inclusive)\n",
+    "print(df.loc['a', 'Name'])  # Select specific value (row 'a', column 'Name')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952d72d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using .iloc to select by integer position\n",
+    "print(df.iloc[0])           # Select the first row\n",
+    "print(df.iloc[0:2])         # Select first two rows (index 0 and 1, exclusive of 2)\n",
+    "print(df.iloc[0, 0])        # Select the value at the first row and first column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "06714dd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using .iloc (Position-based)\n",
+    "df.iloc[0]        # Select first row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5e91e05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using .loc (Label-based)\n",
+    "df.loc[0]       # does not work with 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d3c147a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -697,6 +762,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad9336bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename columns\n",
+    "df.columns = ['Column1', 'Column2']\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "634b2dd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assigning custom index (row) names\n",
+    "df.index = ['Row1', 'Row2', 'Row3']\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a188321c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "965a6dbb-122a-4c82-9847-76cc74f2fa17",
    "metadata": {},
@@ -768,7 +865,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DABatch",
    "language": "python",
    "name": "python3"
   },
@@ -782,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
