Added answers for inclass questions

--- a/Day 4/Day 4 - Data Cleaning  activity with Pandas and NumPy.ipynb
+++ b/Day 4/Day 4 - Data Cleaning  activity with Pandas and NumPy.ipynb
@@ -44,23 +44,23 @@
    "id": "155e8ec7-547b-41f4-b6f6-6e6e719c198c",
    "metadata": {},
    "source": [
-    "# Importance of Data Cleaning\r\n",
-    "\r\n",
-    "Data cleaning is a crucial step in the data analysis process, and here's why:\r\n",
-    "\r\n",
-    "1. **Improves Data Quality**: Clean data ensures accuracy and reliability. When data is free of errors, duplicates, and inconsistencies, you can trust the insights derived from it.\r\n",
-    "\r\n",
-    "2. **Enhances Decision-Making**: Businesses rely on data-driven decisions. Clean data provides a solid foundation for making informed choices, leading to better outcomes.\r\n",
-    "\r\n",
-    "3. **Increases Efficiency**: Time spent on analyzing messy data can be significantly reduced. By cleaning the data beforehand, analysts can focus on deriving insights rather than fixing issues.\r\n",
-    "\r\n",
-    "4. **Prevents Misleading Conclusions**: Outliers or erroneous entries can skew results, leading to incorrect interpretations. Data cleaning helps mitigate these risks, ensuring that conclusions are based on accurate representations.\r\n",
-    "\r\n",
-    "5. **Facilitates Collaboration**: Clean data is easier to share and understand. When teams work with standardized and accurate datasets, collaboration becomes smoother, fostering better communication and teamwork.\r\n",
-    "\r\n",
-    "6. **Regulatory Compliance**: Many industries have regulations regarding data accuracy and integrity. Cleaning data helps organizations comply with these standards, avoiding legal issues and penalties.\r\n",
-    "\r\n",
-    "In summary, data cleaning is not just a technical necessity; it's an essential practice for achieving reliable, actionable insights that drive success.\r\n"
+    "# Importance of Data Cleaning\n",
+    "\n",
+    "Data cleaning is a crucial step in the data analysis process, and here's why:\n",
+    "\n",
+    "1. **Improves Data Quality**: Clean data ensures accuracy and reliability. When data is free of errors, duplicates, and inconsistencies, you can trust the insights derived from it.\n",
+    "\n",
+    "2. **Enhances Decision-Making**: Businesses rely on data-driven decisions. Clean data provides a solid foundation for making informed choices, leading to better outcomes.\n",
+    "\n",
+    "3. **Increases Efficiency**: Time spent on analyzing messy data can be significantly reduced. By cleaning the data beforehand, analysts can focus on deriving insights rather than fixing issues.\n",
+    "\n",
+    "4. **Prevents Misleading Conclusions**: Outliers or erroneous entries can skew results, leading to incorrect interpretations. Data cleaning helps mitigate these risks, ensuring that conclusions are based on accurate representations.\n",
+    "\n",
+    "5. **Facilitates Collaboration**: Clean data is easier to share and understand. When teams work with standardized and accurate datasets, collaboration becomes smoother, fostering better communication and teamwork.\n",
+    "\n",
+    "6. **Regulatory Compliance**: Many industries have regulations regarding data accuracy and integrity. Cleaning data helps organizations comply with these standards, avoiding legal issues and penalties.\n",
+    "\n",
+    "In summary, data cleaning is not just a technical necessity; it's an essential practice for achieving reliable, actionable insights that drive success.\n"
    ]
   },
   {
@@ -411,7 +411,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={'SepalLengthCm': 'SepalLong'}, inplace=True)  # Rename a column {'OldName': 'NewName'}"
+    "df.rename(columns={'SepalLengthCm': 'SepalLong'}, inplace=True)  # Rename a column {'OldName': 'NewName'}\n",
+    "\n",
+    "# inplace=True replaces the original column without creating a new variable to store the column or dataframe"
    ]
   },
   {
@@ -471,46 +473,46 @@
    "metadata": {},
    "source": [
     "Now it's your turn!\n",
-    "### Task: Data Cleaning Exercise\r\n",
-    "\r\n",
-    "### Objective\r\n",
-    "In this exercise, you will practice data cleaning techniques using NumPy and Pandas. You will work with a data of choice or oneset provided to you and perform various data cleaning tasor i#nsights\r\n",
-    "\r\n",
-    "## Instructions\r\n",
-    "1. **Import the Necessary Libraries**\r\n",
-    "   - Write the code to import the Pandas and NumPy libraries.\r\n",
-    "\r\n",
-    "2. **Load the Dataset**\r\n",
-    "   - Write the code to load the provided dataset into a Pandas DataFrame.\r\n",
-    "\r\n",
-    "3. **Explore the Data**\r\n",
-    "   - Use the appropriate methods to view the first few rows of the dataset, obtain summary information, and describe the dataset’s statistical properties.\r\n",
-    "\r\n",
-    "4. **Identify Missing Values**\r\n",
-    "   - Write code to check for any missing values in the dataset.\r\n",
-    "\r\n",
-    "5. **Handle Missing Values**\r\n",
-    "   - Decide how to handle missing values (drop, fill with mean/median/mode) and write the corresponding code to apply your chosen method.\r\n",
-    "\r\n",
-    "6. **Detect Outliers**\r\n",
-    "   - Use visualizations (like box plots) or statistical methods to iden t7 implement your chosen method.\r\n",
-    "\r\n",
-    "8. **Remove Duplicates**\r\n",
-    "   - Write the code to check for and remove an8 duplicate rows in the DataFrame.\r\n",
-    "\r\n",
-    "9. **Standardize Data Formats**\r\n",
+    "### Task: Data Cleaning Exercise\n",
+    "\n",
+    "### Objective\n",
+    "In this exercise, you will practice data cleaning techniques using NumPy and Pandas. You will work with a data of choice or oneset provided to you and perform various data cleaning tasor i#nsights\n",
+    "\n",
+    "## Instructions\n",
+    "1. **Import the Necessary Libraries**\n",
+    "   - Write the code to import the Pandas and NumPy libraries.\n",
+    "\n",
+    "2. **Load the Dataset**\n",
+    "   - Write the code to load the provided dataset into a Pandas DataFrame.\n",
+    "\n",
+    "3. **Explore the Data**\n",
+    "   - Use the appropriate methods to view the first few rows of the dataset, obtain summary information, and describe the dataset’s statistical properties.\n",
+    "\n",
+    "4. **Identify Missing Values**\n",
+    "   - Write code to check for any missing values in the dataset.\n",
+    "\n",
+    "5. **Handle Missing Values**\n",
+    "   - Decide how to handle missing values (drop, fill with mean/median/mode) and write the corresponding code to apply your chosen method.\n",
+    "\n",
+    "6. **Detect Outliers**\n",
+    "   - Use visualizations (like box plots) or statistical methods to iden t7 implement your chosen method.\n",
+    "\n",
+    "8. **Remove Duplicates**\n",
+    "   - Write the code to check for and remove an8 duplicate rows in the DataFrame.\n",
+    "\n",
+    "9. **Standardize Data Formats**\n",
     "   - Ensure that categorical variables have consistent formats (e.g., lowercase). Write the code\n",
-    "9 standardize the specified columns.\r\n",
-    "\r\n",
-    "10. **Sampling Data**\r\n",
-    "    - Write the code to take a random sample o10the cleaned data for further analysis.\r\n",
-    "\r\n",
-    "11. **Save the Cleaned Data**\r\n",
-    "    - Write the code to save the cleane#d DataFrame to a new CSV file.\r\n",
-    "\r\n",
-    "## Deliverables\r\n",
-    "- Submit the Jupyter notebook containing your code and comments explaining each stepke sure to document your choices and methods clearly.\r\n",
-    "port numpy as np\r\n",
+    "9 standardize the specified columns.\n",
+    "\n",
+    "10. **Sampling Data**\n",
+    "    - Write the code to take a random sample o10the cleaned data for further analysis.\n",
+    "\n",
+    "11. **Save the Cleaned Data**\n",
+    "    - Write the code to save the cleane#d DataFrame to a new CSV file.\n",
+    "\n",
+    "## Deliverables\n",
+    "- Submit the Jupyter notebook containing your code and comments explaining each stepke sure to document your choices and methods clearly.\n",
+    "port numpy as np\n",
     "\n",
     "\n"
    ]
@@ -564,32 +566,32 @@
    "id": "cdc3712c-0c7c-4ee9-a0f8-1a5ef051e281",
    "metadata": {},
    "source": [
-    "### Next Steps after Data Cleaning and Manipulation:\r\n",
-    "\r\n",
-    "1. **Exploratory Data Analysis (EDA)**:\r\n",
-    "   - Visualize the cleaned data using libraries like Matplotlib or Seaborn.\r\n",
-    "   - Analyze relationships between features (e.g., survival rates based on gender, class, or age).\r\n",
-    "   - Create visual plots like histograms, box plots, and heatmaps to understand feature distributions and correlations.\r\n",
-    "\r\n",
-    "2. **Feature Selection**:\r\n",
-    "   - Identify the most important features for your analysis or model by evaluating feature importance, correlations, or using statistical methods.\r\n",
-    "   - Consider dimensionality reduction techniques like PCA if dealing with high-dimensional data.\r\n",
-    "\r\n",
-    "3. **Modeling**:\r\n",
-    "   - Use the cleaned and prepared dataset to build predictive models using libraries such as Scikit-learn.\r\n",
+    "### Next Steps after Data Cleaning and Manipulation:\n",
+    "\n",
+    "1. **Exploratory Data Analysis (EDA)**:\n",
+    "   - Visualize the cleaned data using libraries like Matplotlib or Seaborn.\n",
+    "   - Analyze relationships between features (e.g., survival rates based on gender, class, or age).\n",
+    "   - Create visual plots like histograms, box plots, and heatmaps to understand feature distributions and correlations.\n",
+    "\n",
+    "2. **Feature Selection**:\n",
+    "   - Identify the most important features for your analysis or model by evaluating feature importance, correlations, or using statistical methods.\n",
+    "   - Consider dimensionality reduction techniques like PCA if dealing with high-dimensional data.\n",
+    "\n",
+    "3. **Modeling**:\n",
+    "   - Use the cleaned and prepared dataset to build predictive models using libraries such as Scikit-learn.\n",
     "   - Try different algorithms like logistic regression, decision trees, or random forests to pred\n",
     "  \n",
-    " 4. Evaluation\r\n",
-    "\r\n",
-    "- **Split the dataset into training and testing sets**:  \r\n",
-    "   This helps to assess how well the model generalizes to unseen data. Usually, a common split is 80% of the data for training and 20% for testing.\r\n",
-    "   \r\n",
-    "- **Evaluate model performance**:  \r\n",
-    "   After training, the model should be evaluated on the test data using various metrics such as:\r\n",
-    "   - **Accuracy**: Measures the proportion of correct predictions out of all predictions.\r\n",
-    "   - **Precision**: Focuses on the proportion of true positives out of all positive predictions.\r\n",
-    "   - **Recall**: Measures the proportion of true positives out of all actual p new data.\r\n",
-    "r model interaction.\r\n"
+    " 4. Evaluation\n",
+    "\n",
+    "- **Split the dataset into training and testing sets**:  \n",
+    "   This helps to assess how well the model generalizes to unseen data. Usually, a common split is 80% of the data for training and 20% for testing.\n",
+    "   \n",
+    "- **Evaluate model performance**:  \n",
+    "   After training, the model should be evaluated on the test data using various metrics such as:\n",
+    "   - **Accuracy**: Measures the proportion of correct predictions out of all predictions.\n",
+    "   - **Precision**: Focuses on the proportion of true positives out of all positive predictions.\n",
+    "   - **Recall**: Measures the proportion of true positives out of all actual p new data.\n",
+    "r model interaction.\n"
    ]
   },
   {
