--- a/Day 13/(Student) Advanced SQL Querries-checkpoint copy.ipynb
+++ b/Day 13/(Student) Advanced SQL Querries-checkpoint copy.ipynb
@@ -524,6 +524,68 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d6259d4",
+   "metadata": {},
+   "source": [
+    "To drop **(remove) a column** from a table in PostgreSQL, you can use the `ALTER TABLE` command with the `DROP COLUMN` clause.\n",
+    "\n",
+    "```sql\n",
+    "ALTER TABLE table_name\n",
+    "DROP COLUMN column_name;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7c0a1e4",
+   "metadata": {},
+   "source": [
+    "**Example:** You can drop multiple columns in one go by separating them with commas:\n",
+    "```sql\n",
+    "ALTER TABLE movies\n",
+    "DROP COLUMN release_year, \n",
+    "DROP COLUMN genre;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b104cef5",
+   "metadata": {},
+   "source": [
+    "To drop **remove (delete) a row** from a table in PostgreSQL, you can use the `DELETE` command with the `WHERE` clause.\n",
+    "\n",
+    "```sql\n",
+    "DELETE FROM table_name\n",
+    "WHERE condition;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "071d037a",
+   "metadata": {},
+   "source": [
+    "**Example:** Suppose you have a movies table and you want to delete the row where the movie_id is 5. You can run:\n",
+    "```sql\n",
+    "DELETE FROM movies\n",
+    "WHERE movie_id = 5;\n",
+    "```\n",
+    "Removing multiple rows at once:\n",
+    "```sql\n",
+    "DELETE FROM movies\n",
+    "WHERE release_year < 2000;\n",
+    "```\n",
+    "\n",
+    "Removing multiple rows using operations:\n",
+    "```sql\n",
+    "DELETE FROM movies\n",
+    "WHERE release_year > 200 and release_year < 300;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "449f867c",
    "metadata": {},
    "source": [
@@ -671,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cc157c7",
+   "id": "d8a4f027",
    "metadata": {},
    "source": [
     "**2. LEFT JOIN (or LEFT OUTER JOIN)**\n",
@@ -692,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9f41ea",
+   "id": "0eaf0e16",
    "metadata": {},
    "source": [
     "**3. RIGHT JOIN (or RIGHT OUTER JOIN)**\n",
@@ -762,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4bb25c4",
+   "id": "64397733",
    "metadata": {},
    "source": [
     "**6. Joins with Multiple Tables**\n",
@@ -944,7 +1006,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
-    "    <h3>3. Window functions for advanced analytics.\n",
+    "    <h3>3. Window functions for advanced analytics.  (Advanced/Optional)\n",
     "</h3> </div>"
    ]
   },
@@ -1247,9 +1309,59 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3034bc23",
+   "id": "eca01e46",
    "metadata": {},
-   "source": []
+   "source": [
+    "This activity will help them understand data cleaning, querying, and basic data analysis techniques.\n",
+    "\n",
+    "**Objective:** Import real-world movie datasets into PostgreSQL and visualize the data.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Instructions:\n",
+    "\n",
+    "1. **Import Datasets:**\n",
+    "   - Use the `\\copy` command in PSQL Tool to import the cleaned `movies.csv` and `ratings.csv` datasets into their respective tables.\n",
+    "   (this will have its own challenges)\n",
+    "\n",
+    "2. **View Imported Data:**\n",
+    "   - Execute the following commands to see the first 10 entries from each table:\n",
+    "     ```sql\n",
+    "     SELECT * FROM movies LIMIT 10;\n",
+    "     SELECT * FROM ratings LIMIT 10;\n",
+    "     ```\n",
+    "\n",
+    "3a. **Create Smaller Tables:**\n",
+    "   - Create smaller tables to work with queries: (To understand the processes from SQL)\n",
+    "\n",
+    "     ```sql\n",
+    "    CREATE TABLE movies_500 AS\n",
+    "    SELECT * FROM ratings\n",
+    "    LIMIT 500; \n",
+    "\n",
+    "    CREATE TABLE ratings_500 AS\n",
+    "    SELECT * FROM ratings\n",
+    "    LIMIT 500; \n",
+    "     ```\n",
+    "\n",
+    "3b. **Truncate Datasets (Optional):**\n",
+    "   - If needed, run the following commands to clear the tables for a fresh import:\n",
+    "     ```sql\n",
+    "     TRUNCATE TABLE movies;\n",
+    "     TRUNCATE TABLE ratings;\n",
+    "     ```\n",
+    "\n",
+    "4. **Optional Advanced Queries:**\n",
+    "   - Perform JOIN operations to analyze relationships. For example:\n",
+    "     ```sql\n",
+    "     SELECT m.title, AVG(r.rating)\n",
+    "     FROM movies m\n",
+    "     JOIN ratings r ON m.movieId = r.movieId\n",
+    "     GROUP BY m.title;\n",
+    "     ```\n",
+    "   - This query will find the average rating for each movie.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1265,7 +1377,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "    <b><font size=\"5\"> Live Exercise</font> </b>\n",
+    "    <b><font size=\"5\"> Live Practice Exercise</font> </b>\n",
     "</div>\n",
     "\n",
     "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
@@ -1289,6 +1401,10 @@
     "\n",
     "- movies: Contains information about movies.\n",
     "- directors: Contains information about directors.\n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "\n",
     "\n",
     "```sql\n",
     "CREATE TABLE movies (\n",
@@ -1305,6 +1421,12 @@
     "```\n",
     "Step 2: Insert Data\n",
     "Add some fun movie and director data into these tables.\n",
+    "\n",
+    "\n",
+    "\n",
+    "-\n",
+    "-\n",
+    "-\n",
     "\n",
     "```sql\n",
     "INSERT INTO movies (movie_name, release_year)\n",
@@ -1330,11 +1452,15 @@
    "id": "f5a80eb9",
    "metadata": {},
    "source": [
-    "**Practice querrying now:**\n",
+    "**Practice querying now:**\n",
     "\n",
     "Query 1: Retrieve All Movies\n",
     "\n",
     "Goal: Display all the movies in the database.\n",
+    "\n",
+    "-\n",
+    "-\n",
+    "-\n",
     "\n",
     "```sql\n",
     "SELECT * FROM movies;\n",
@@ -1343,6 +1469,11 @@
     "Query 2: Find Movies Released After 2010\n",
     "\n",
     "Goal: Use the WHERE clause to filter movies based on the release year.\n",
+    "\n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "\n",
     "\n",
     "```sql\n",
     "SELECT movie_name, release_year \n",
@@ -1354,6 +1485,11 @@
     "\n",
     "Goal: Use a JOIN to find the director of a specific movie.\n",
     "\n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "\n",
+    "\n",
     "```sql\n",
     "SELECT m.movie_name, d.director_name\n",
     "FROM movies m\n",
@@ -1364,6 +1500,11 @@
     "Query 4: Count the Number of Movies\n",
     "\n",
     "Goal: Use an aggregate function (COUNT()) to count how many movies are in the database.\n",
+    "\n",
+    "-\n",
+    "-\n",
+    "-\n",
+    "\n",
     "\n",
     "```sql\n",
     "SELECT COUNT(*) AS total_movies FROM movies;\n",
@@ -1501,7 +1642,13 @@
    "source": [
     "Some Additional Resources:\n",
     "\n",
-    "- Installation tutorial for postgreSQL -> https://www.youtube.com/watch?v=4qH-7w5LZsA"
+    "- Installation tutorial for postgreSQL -> https://www.youtube.com/watch?v=4qH-7w5LZsA\n",
+    "\n",
+    "- PSQL exercises - https://pgexercises.com/questions/basic/\n",
+    "\n",
+    "- Data Source - Grouplens - https://grouplens.org/datasets/movielens/\n",
+    "- Large data tables on movie ratings - https://files.grouplens.org/datasets/movielens/ml-32m.zip\n",
+    "- Online Retail Dataset on UCI ML Repo: https://archive.ics.uci.edu/dataset/502/online+retail"
    ]
   },
   {
@@ -1541,18 +1688,8 @@
     "orders: Contains details of food orders made by customers.\n",
     "\n",
     "```sql\n",
-    "CREATE TABLE customers (\n",
-    "    customer_id SERIAL PRIMARY KEY,\n",
-    "    customer_name VARCHAR(100),\n",
-    "    contact_info VARCHAR(100)\n",
-    ");\n",
     "\n",
-    "CREATE TABLE orders (\n",
-    "    order_id SERIAL PRIMARY KEY,\n",
-    "    customer_id INT REFERENCES customers(customer_id),\n",
-    "    order_date DATE,\n",
-    "    food_item VARCHAR(100),\n",
-    "    amount DECIMAL(10, 2)\n",
+    "\n",
     ");\n",
     "```\n",
     "\n",
@@ -1560,21 +1697,7 @@
     "Step 2: Insert Data into Tables\n",
     "Populate the tables with some fun, fictional data for customers and their food orders.\n",
     "```sql\n",
-    "INSERT INTO customers (customer_name, contact_info)\n",
-    "VALUES\n",
-    "('Alice', 'alice@mail.com'),\n",
-    "('Bob', 'bob@mail.com'),\n",
-    "('Charlie', 'charlie@mail.com'),\n",
-    "('Daisy', 'daisy@mail.com');\n",
     "\n",
-    "INSERT INTO orders (customer_id, order_date, food_item, amount)\n",
-    "VALUES\n",
-    "(1, '2024-10-10', 'Pizza', 12.99),\n",
-    "(2, '2024-10-10', 'Burger', 9.50),\n",
-    "(1, '2024-10-11', 'Salad', 7.50),\n",
-    "(3, '2024-10-11', 'Pasta', 11.00),\n",
-    "(4, '2024-10-12', 'Sandwich', 6.99),\n",
-    "(2, '2024-10-12', 'Fries', 4.00);\n",
     "```\n",
     "\n",
     "\n",
@@ -1584,9 +1707,7 @@
     "\n",
     "- Retrieve all the order details including customer names.\n",
     "```sql\n",
-    "SELECT o.order_id, c.customer_name, o.food_item, o.amount\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id;\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1596,10 +1717,7 @@
     "\n",
     "- Use a JOIN to get the names of customers who ordered Pizza.\n",
     "```sql\n",
-    "SELECT c.customer_name, o.food_item\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "WHERE o.food_item = 'Pizza';\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1610,10 +1728,7 @@
     "\n",
     "- Use SUM() to calculate the total amount spent by each customer.\n",
     "```sql\n",
-    "SELECT c.customer_name, SUM(o.amount) AS total_spent\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "GROUP BY c.customer_name;\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1624,11 +1739,7 @@
     "\n",
     "- Use COUNT() and GROUP BY to find out which customer placed the highest number of orders.\n",
     "```sql\n",
-    "SELECT c.customer_name, COUNT(o.order_id) AS order_count\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "GROUP BY c.customer_name\n",
-    "ORDER BY order_count DESC;\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1639,10 +1750,7 @@
     "\n",
     "- Use WHERE to filter orders based on the date.\n",
     "```sql\n",
-    "SELECT o.order_id, c.customer_name, o.food_item, o.order_date\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "WHERE o.order_date >= '2024-10-11';\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1653,11 +1761,7 @@
     "\n",
     "- Use HAVING to find customers with multiple orders on a single day.\n",
     "```sql\n",
-    "SELECT c.customer_name, o.order_date, COUNT(o.order_id) AS order_count\n",
-    "FROM orders o\n",
-    "JOIN customers c ON o.customer_id = c.customer_id\n",
-    "GROUP BY c.customer_name, o.order_date\n",
-    "HAVING COUNT(o.order_id) > 1;\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1680,19 +1784,7 @@
     "sales: Contains information about sales transactions, including product sold, quantity, and the total revenue.\n",
     "\n",
     "```sql\n",
-    "CREATE TABLE products (\n",
-    "    product_id SERIAL PRIMARY KEY,\n",
-    "    product_name VARCHAR(100),\n",
-    "    price DECIMAL(10, 2)\n",
-    ");\n",
     "\n",
-    "CREATE TABLE sales (\n",
-    "    sale_id SERIAL PRIMARY KEY,\n",
-    "    product_id INT REFERENCES products(product_id),\n",
-    "    quantity_sold INT,\n",
-    "    sale_date DATE,\n",
-    "    total_revenue DECIMAL(10, 2)\n",
-    ");\n",
     "```\n",
     "\n",
     "\n",
@@ -1701,18 +1793,7 @@
     "Step 2: Insert Data into Tables\n",
     "Populate the tables with products and sales data.\n",
     "```sql\n",
-    "INSERT INTO products (product_name, price)\n",
-    "VALUES \n",
-    "('Laptop', 1000.00),\n",
-    "('Smartphone', 500.00),\n",
-    "('Tablet', 300.00);\n",
     "\n",
-    "INSERT INTO sales (product_id, quantity_sold, sale_date, total_revenue)\n",
-    "VALUES\n",
-    "(1, 5, '2024-10-10', 5000.00),\n",
-    "(2, 10, '2024-10-11', 5000.00),\n",
-    "(3, 3, '2024-10-12', 900.00),\n",
-    "(1, 2, '2024-10-13', 2000.00);\n",
     "```\n",
     "\n",
     "Step 3: Calculate Total Sales and Revenue\n",
@@ -1721,12 +1802,7 @@
     "- Use SUM() to calculate the total revenue and total sales for each product.\n",
     "\n",
     "```sql\n",
-    "SELECT p.product_name, \n",
-    "SUM(s.quantity_sold) AS total_quantity_sold,\n",
-    "SUM(s.total_revenue) AS total_revenue\n",
-    "FROM sales s\n",
-    "JOIN products p ON s.product_id = p.product_id\n",
-    "GROUP BY p.product_name;\n",
+    "\n",
     "```\n",
     "\n",
     "\n",
@@ -1735,12 +1811,7 @@
     "- Use RANK() to rank products by sales performance.\n",
     "\n",
     "```sql\n",
-    "SELECT p.product_name, \n",
-    "SUM(s.total_revenue) AS total_revenue, \n",
-    "RANK() OVER (ORDER BY SUM(s.total_revenue) DESC) AS revenue_rank\n",
-    "FROM sales s\n",
-    "JOIN products p ON s.product_id = p.product_id\n",
-    "GROUP BY p.product_name;\n",
+    "\n",
     "```\n",
     "\n",
     "Step 5: Cumulative Revenue\n",
@@ -1748,11 +1819,7 @@
     "- Use a window function to calculate cumulative sums for revenue.\n",
     "\n",
     "```sql\n",
-    "SELECT p.product_name, s.total_revenue, \n",
-    "SUM(s.total_revenue) OVER (ORDER BY s.total_revenue DESC) AS cumulative_revenue\n",
-    "FROM sales s\n",
-    "JOIN products p ON s.product_id = p.product_id\n",
-    "ORDER BY cumulative_revenue DESC;\n",
+    "\n",
     "```\n",
     "\n",
     "Step 6: Compare Sales with Lead and Lag\n",
@@ -1761,11 +1828,7 @@
     "- Use LEAD() and LAG() to analyze differences in total revenue between consecutive products.\n",
     "\n",
     "```sql\n",
-    "SELECT p.product_name, s.total_revenue,\n",
-    "LAG(s.total_revenue) OVER (ORDER BY s.total_revenue DESC) AS previous_revenue,\n",
-    "LEAD(s.total_revenue) OVER (ORDER BY s.total_revenue DESC) AS next_revenue\n",
-    "FROM sales s\n",
-    "JOIN products p ON s.product_id = p.product_id;\n",
+    "\n",
     "```"
    ]
   },
@@ -1784,8 +1847,16 @@
    "id": "d4e08c3f-3e5b-46a6-9fbb-456cbd850553",
    "metadata": {},
    "source": [
-    "1. topic:\n",
-    "    - question"
+    "### 1. What is the difference between `TRUNCATE`, `DELETE`, and `DROP` commands in SQL?\n",
+    "\n",
+    "### 2. What is a `JOIN`? Can you explain different types of `JOINs` in SQL?\n",
+    "\n",
+    "### 3. What is the difference between `WHERE` and `HAVING` clauses?\n",
+    "\n",
+    "### 4. What is normalization, and what are the different normal forms?\n",
+    "\n",
+    "\n",
+    "### 5. What is an `INDEX` in SQL, and when should you use it?\n"
    ]
   },
   {
