added exercise solutions too

--- a/Day 13/(Student) Advanced SQL Querries-checkpoint copy.ipynb
+++ b/Day 13/(Student) Advanced SQL Querries-checkpoint copy.ipynb
@@ -1335,13 +1335,13 @@
     "   - Create smaller tables to work with queries: (To understand the processes from SQL)\n",
     "\n",
     "     ```sql\n",
-    "    CREATE TABLE movies_500 AS\n",
-    "    SELECT * FROM ratings\n",
-    "    LIMIT 500; \n",
+    "        CREATE TABLE movies_500 AS\n",
+    "        SELECT * FROM movies\n",
+    "        LIMIT 500; \n",
     "\n",
-    "    CREATE TABLE ratings_500 AS\n",
-    "    SELECT * FROM ratings\n",
-    "    LIMIT 500; \n",
+    "        CREATE TABLE ratings_500 AS\n",
+    "        SELECT * FROM ratings\n",
+    "        LIMIT 500; \n",
     "     ```\n",
     "\n",
     "3b. **Truncate Datasets (Optional):**\n",
