--- a/Day 14/Data Warehousing Concepts.ipynb
+++ b/Day 14/Data Warehousing Concepts.ipynb
@@ -178,12 +178,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0369c7c",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "9cc9b4e9-bc75-48d4-853e-b176194e1581",
    "metadata": {},
    "source": [
@@ -270,6 +264,14 @@
     "---\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb998588",
+   "metadata": {},
+   "source": [
+    "![image.png](https://cdn.prod.website-files.com/6064b31ff49a2d31e0493af1/66c5bbe262246d5ae47d8094_655ddc86120dcddac9184917_iB9LraTV7sKJAttPn1tXjBzMFpdd1cpcg724vAcfjU7ND-JN1Of7eAxtHLAiPjhn9hvpzAHrXVdDjVZtguEstwXa8Jazn7n5jc4ofMR_SSDupxEFJhDfHDMR2RTM-CQmgVo5piwEGhJvQvXtywlzNqw.png)"
    ]
   },
   {
