--- a/Day 18/Code/Linear Regression - Activity .ipynb
+++ b/Day 18/Code/Linear Regression - Activity .ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3d406509",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b6551a2f",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "5e388df4",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "f7a68924",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "26a2515e",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "b24a63fb",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "970f2766",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "f49cbc36",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\devid\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\devid\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "31a10a55",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "a001b9f3",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "7ae1232a",
    "metadata": {},
    "outputs": [
@@ -370,7 +370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\devid\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "c:\\Users\\devid\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
     },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "3ab0e0b3",
    "metadata": {},
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "32740f2d",
    "metadata": {},
    "outputs": [
@@ -456,23 +456,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso Regression:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'Lasso' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLasso Regression:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m lasso_model \u001b[38;5;241m=\u001b[39m Lasso(alpha\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1.0\u001b[39m)\n\u001b[0;32m      3\u001b[0m evaluate_model(lasso_model, X_train, y_train, X_test, y_test)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Lasso' is not defined"
+      "Lasso Regression:\n",
+      "R² Score: 0.37276586463755124\n",
+      "Mean Squared Error: 11161399.391546292\n"
      ]
     }
    ],
    "source": [
     "print(\"Lasso Regression:\")\n",
+    "\n",
     "lasso_model = Lasso(alpha=1.0)\n",
     "evaluate_model(lasso_model, X_train, y_train, X_test, y_test)\n"
    ]
@@ -487,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "d660bb2c",
    "metadata": {},
    "outputs": [],
@@ -505,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "ba5b05cf",
    "metadata": {},
    "outputs": [
@@ -530,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "b2287539",
    "metadata": {},
    "outputs": [
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "58d67705",
    "metadata": {},
    "outputs": [
@@ -605,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e5f4c75a",
    "metadata": {},
    "outputs": [
@@ -636,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "ed366a21",
    "metadata": {},
    "outputs": [
@@ -700,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "8f8098e4",
    "metadata": {},
    "outputs": [
@@ -794,7 +786,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
