--- a/Day 22 - 23 (Project 4)/Hands On Feature Selection.ipynb
+++ b/Day 22 - 23 (Project 4)/Hands On Feature Selection.ipynb
@@ -62,6 +62,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51782996",
+   "metadata": {},
+   "source": [
+    "Feature selection is all about picking the right features for your model, just like a chef picks the best ingredients for their dish. \n",
+    "\n",
+    "The goal is to improve model performance and reduce complexity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "944cad0b",
    "metadata": {},
    "source": [
